# django_repo

./: .gitignore  CELERY_SETUP.md  DOCKER_SETUP.md  Dockerfile  Dockerfile_microservice  Pipfile  docker-compose.dev.yml  docker-compose.yml  docker-scripts.ps1  docker-scripts.sh  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci_main.yml
apps/health/: README.md  __init__.py  apps.py  tasks.py  tests.py  urls.py  views.py
apps/health/management/commands/: setup_celery_beat.py
core/: celery.py  settings.py  urls.py
